# agora-bridge

./: .gitignore  .requirements.txt.swp  Dockerfile  GEMINI.md  README.md  agora-bluesky-bot.service  agora-bridge-api.service  agora-bridge.service  agora-bullpen.service  agora-mastodon-bot.service  agora-matrix-bot.service  agora-pusher.service  agora.py  anagora.py  build-image.sh  clean.sh  entrypoint.sh  export_stoa.py  fedwiki.sh  feed.py  gardens.py  import_stoa.py  package-lock.json  package.json  pnpm-lock.yaml  pull.py  push-gardens.sh  push-image.sh  push.sh  push_gardens.sh  pyproject.toml  requirements.txt  run-api-dev.sh  run-api-prod.sh  run-bluesky-bot-dev.sh  run-bluesky-bot-prod.sh  run-bluesky-bot.sh  run-bullpen.sh  run-dev.sh  run-docker.sh  (+11 more)
api/: .gitignore  README.md  __init__.py  agora.py  app.ts  config.example.json  forgejo.py  git-backend.ts  package-lock.json  package.json  pnpm-lock.yaml  run-prod.sh  tsconfig.json
api/templates/: index.html  status.html
app/: main.py
app/templates/: index.html
betula/: betulagora.py
bots/: .gitignore  common.py
bots/bluesky/: agora-bot.py  agora-bot.yaml.example  flancian.py  run-dev.sh  run-prod.sh
bots/mastodon/: .agora-bot.py.swp  agora-bot.py  agora-bot.yaml.example  common.py  dry-run.sh  main.py  pyproject.toml  questions.md  requirements.txt  run-dev.sh  run-prod.sh  setup.sh
bots/matrix/: LICENSE  README.md  agora.py  maubot.yaml  org.anagora.agorabot-v1.0.20.mbp  org.anagora.agorabot-v1.0.21.mbp
bots/twitter/: agora-bot.py  agora-bot.yaml.example  dry-run.sh  friends.yaml  pyproject.toml  requirements.txt  run-dev.sh  run-prod.sh  run.sh  tweets.yaml
bots/youtube/: playlist.py  pyproject.toml
bullpen/: bullpen.py  nginx_example.conf  setup_bull.sh
conf/: agora-bluesky-bot.service  agora-bridge-api.service  agora-bridge.service  agora-bullpen.service  agora-mastodon-bot.service  agora-matrix-bot.service  agora-pusher.service
docs/: BULLPEN.md
fedwiki/: .gitignore  config.edn.sample  go.mod  main.go  package-lock.json  package.json  page.md  shadow-cljs.edn
fedwiki/.shadow-cljs/: classpath.edn
fedwiki/parsing/: parsing.go  parsing_test.go
fedwiki/public/: index.html
fedwiki/src/main/fedwiki/: app.clj  app.cljs
scripts/: test_provision.py
sql-import/: .gitignore  garden.db-journal  package.json  pnpm-lock.yaml  schema.sql  sqlite-import.js
sql-import/fixtures/: subnode.html
sql-import/lib/: files.js  model.js  parser.js
sqlite-import/: .env.sample  .gitignore  README.md  package-lock.json  package.json  sqlite-import.js  worker.py
sqlite-import/fixtures/: subnode.md
sqlite-import/lib/: files.js  files.test.js  model.js  parser.js  parser.test.js
