[tool.poetry]
name = "agora-bridge"
version = "0.1.0"
description = "https://anagora.org/agora+bridge"
authors = ["Flancian <0@flancia.org>"]
license = "Apache2"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8,<3.13"
feedparser = "^6.0.10"
html2text = "^2020.1.16"
python-slugify = "^6.1.2"
PyYAML = "^6.0"
sgmllib3k = "^1.0.0"
text-unidecode = "^1.3"
Flask = "^2.2.2"
jsons = "^1.6.3"
mastodon-py = "^1.5.2"
atproto = "^0.0.48"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-login = "^0.6.3"
flask-oauthlib = "^0.9.6"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
