[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-bridge"
version = "0.1.0"
dependencies = [
    "feedparser>=6.0.10",
    "GitPython>=3.1.31",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "py-markdown-table>=0.3.3",
    "networkx>=3.1",
    "matplotlib>=3.7.1",
    "rdflib>=6.3.2",
    "pydot>=1.4.2",
    "python-dateutil>=2.8.2",
    "mastodon-py>=1.8.0",
    "tweepy>=4.14.0",
    "bs4>=0.0.1",
    "thefuzz>=0.19.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.21.0",
    "openai>=0.27.6",
    "pyyaml>=6.0",
    "bluesky>=0.0.2",
    "atproto>=0.0.2",
]

description = "https://anagora.org/agora+bridge"
authors = [
    {name = "Flancian", email = "0@flancia.org"},
]
readme = "README.md"

[project.scripts]
pull = "pull:main"

[tool.setuptools]
packages = []

[tool.uv.workspace]
members = [
    "bots/mastodon",
]
