[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-bridge"
version = "0.1.0"
description = "Scripts and utilities to connect the Agora to the internet."
readme = "README.md"
requires-python = ">=3.10"

# Core dependencies for the bridge worker (pull.py) and web UI.
# Based on the root requirements.txt.
dependencies = [
    "alembic==1.16.4",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "authlib>=1.3.0",
    "blinker==1.9.0",
    "blurhash==1.1.5",
    "cachelib==0.13.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "cryptography==45.0.6",
    "decorator==5.2.1",
    "dnspython==2.7.0",
    "feedparser==6.0.11",
    "flask==3.1.2",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.2.4",
    "gunicorn==21.2.0",
    "h11==0.16.0",
    "html2text==2025.4.15",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jsons==1.6.3",
    "libipld==3.1.1",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "oauthlib>=2.1.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-magic==0.4.27",
    "python-slugify==8.0.4",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "requests-oauthlib>=1.1.0",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "text-unidecode==1.3",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "typish==1.9.3",
    "urllib3==2.5.0",
    "websockets==13.1",
    "werkzeug==3.1.3",
]

[project.optional-dependencies]
mastodon = [
    "mastodon-py==2.1.2",
]
twitter = [
    "tweepy>=4.10.1",
    "cachetools>=5.2.0",
]
bluesky = [
    "atproto==0.0.65",
]
matrix = [
    # Assuming maubot is the key dependency.
    # Further research might be needed if it's a more complex setup.
]
youtube = [
    "pytube>=15.0.0",
]
all = [
    "agora-bridge[mastodon]",
    "agora-bridge[twitter]",
    "agora-bridge[bluesky]",
    "agora-bridge[matrix]",
    "agora-bridge[youtube]",
]

[project.urls]
"Homepage" = "https://anagora.org/agora-bridge"
"Source" = "https://github.com/flancian/agora-bridge"

[tool.setuptools.packages.find]
include = ["bots*"]