[tool.poetry]
name = "agora twitter bot"
version = "0.1.0"
description = "https://anagora.org/agora-twitter-bot"
authors = ["Flancian <0@flancia.org>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.7"
cachetools = "^5.2.0"
tweepy = "^4.10.1"
requests = "^2.28.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
